crates/deadline-cli/tests/cli/snapshots/cli__worker__worker_get_prints_details.snap
---
source: crates/deadline-cli/tests/cli/worker.rs
info:
  program: deadline
  args:
    - worker
    - get
    - "--fleet-id"
    - fleet-abc
    - "--worker-id"
    - worker-aaa
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:61908"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:61908"
    AWS_ENDPOINT_URL_STS: "http://localhost:61908"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpen9Cmg/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpen9Cmg
---
success: true
exit_code: 0
----- stdout -----
workerId: worker-aaa
fleetId: fleet-abc
farmId: farm-abc
status: RUNNING


----- stderr -----
