crates/deadline-cli/tests/cli/snapshots/cli__worker__worker_list_no_fleet_id_exits_with_error.snap
---
source: crates/deadline-cli/tests/cli/worker.rs
info:
  program: deadline
  args:
    - worker
    - list
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:61907"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:61907"
    AWS_ENDPOINT_URL_STS: "http://localhost:61907"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpLnYgk7/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpLnYgk7
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  --fleet-id <FLEET_ID>

Usage: deadline worker list --fleet-id <FLEET_ID>

For more information, try '--help'.
